[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Flower.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Flower.gd" type="Script" id=2]
[ext_resource path="res://Misc/WallConnect.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 52, 26, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 26, 52, 26, 26 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 52, 52, 26, 26 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 78, 52, 26, 26 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 26, 26, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 26, 26, 26, 26 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 9.27681, 6.47256 )

[sub_resource type="CircleShape2D" id=13]
radius = 150.0

[node name="Flower" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.778404, -13.4212 )
frames = SubResource( 11 )
animation = "idle"
playing = true

[node name="ProjectileSpawn" type="Position2D" parent="."]
position = Vector2( -1.5874, -17.263 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
"hittable",
]]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.27784, -6.41899 )
shape = SubResource( 12 )

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource( 13 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WallConnect" parent="." instance=ExtResource( 3 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_AggroRange_area_entered"]
[connection signal="area_exited" from="AggroRange" to="." method="_on_AggroRange_area_exited"]
